@@ -1,39 +1,25 @@
-plugins {
-    id "java"
-}
+apply plugin: "java"
 
 version '1.0'
-
-targetCompatibility = 8
-sourceCompatibility = JavaVersion.VERSION_16
 
 sourceSets.main.java.srcDirs = ["src"]
 
 repositories{
-    mavenLocal()
     mavenCentral()
+    maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
     maven{ url 'https://www.jitpack.io' }
+}
+
+java{
+    targetCompatibility = 8
+    sourceCompatibility = JavaVersion.VERSION_17
 }
 
 ext{
     //the build number that this mod is made for
     mindustryVersion = 'v145'
-    arcVersion = "v145"
-    uncVersion = "1.8.5"
     jabelVersion = "93fde537c7"
     sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
-}
-
-tasks.withType(JavaCompile){
-    options.fork = true
-    options.forkOptions.jvmArgs.addAll([
-    "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-    "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-    "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-    "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-    "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-    "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
-    ])
 }
 
 //java 8 backwards compatibility flag
@@ -45,20 +31,9 @@ allprojects{
 
 dependencies{
     compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.MindustryJitpack:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
 
     annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
-    
-    compileOnly "com.github.EB-wilson.UniverseCore:mindustry:$uncVersion"
-    compileOnly "com.github.EB-wilson.UniverseCore:utilties:$uncVersion"
-    compileOnly "com.github.EB-wilson.UniverseCore:abstract:$uncVersion"
-    compileOnly "com.github.EB-wilson.UniverseCore:implabstract:$uncVersion"
-    compileOnly "com.github.EB-wilson.UniverseCore:dynamilizer:$uncVersion"
-    compileOnly "com.github.EB-wilson.UniverseCore:annotations:$uncVersion"
-
-    implementation 'org.jetbrains:annotations:23.0.0'
-
-    annotationProcessor "com.github.EB-wilson.UniverseCore:annotations:$uncVersion"
 }
 
 //force arc version
@@ -90,7 +65,7 @@ task jarAndroid{
 }
 
 jar{
-    archiveFileName = "${project.archivesBaseName}Desktop.jar"
+    archiveFileName = "${base.archivesBaseName}Desktop.jar"
 
     from{
         configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
@@ -108,7 +83,7 @@ jar{
 task deploy(type: Jar){
     dependsOn jarAndroid
     dependsOn jar
-    archiveFileName = "${project.archivesBaseName}.jar"
+    archiveFileName = "${base.archivesBaseName}.jar"
 
     from{ [zipTree("$buildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}Android.jar")] }
 
